# agefix-agxcl-python-sdk

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  setup.cfg  setup.py
agxcl_sdk/: __init__.py  client.py  contracts.py
docs/: conf.py  index.rst  modules.rst  requirements.txt
examples/: defi_examples.py  gaming_examples.py  governance_examples.py  nft_examples.py
